Fix #menu jumping to far down

--- a/site/assets/css/style.less
+++ b/site/assets/css/style.less
@@ -106,7 +106,7 @@ h2 { // Section header class?
 	}
 }
 
-.menu {
+.menu ul {
     li span {
 	&:first-child {
 	    display: flex;
@@ -195,7 +195,7 @@ h2 { // Section header class?
     perspective: 8px;
     perspective-origin: 0%;
     overflow: hidden;
-    > div {
+    > .dark-overlay {
         position: absolute;
         background-color: rgba(0, 0, 0, 0.5);
         width: 100vw;
